fix positioning for remoteStorage widget on mobile

--- a/css/litewrite.css
+++ b/css/litewrite.css
@@ -151,7 +151,7 @@ footer a { display:inline; padding:0; }
 		}
 
 	#remotestorage-connect {
-		position:relative; right:1px; top:-2px;
+		position:relative; right:0; top:-5px;
 	}
 
 	footer { display:none; }
